--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,45 @@ composeMaterial = "1.2.1"
 composeFoundation = "1.2.1"
 activityCompose = "1.7.2"
 coreSplashscreen = "1.0.1"
+kotlinAndroid = "1.9.22"
+coreKtx = "1.13.1"
+junit = "4.13.2"
+androidxTestExtJunit = "1.1.5"
+espressoCore = "3.5.1"
+lifecycleRuntimeKtx = "2.7.0"
+hilt = "2.50"
+appcompat = "1.6.1"
+chucker = "3.5.2"
+accompanist = "0.32.0"
+splash = "1.0.1"
+constraintlayout = "1.0.1"
+glide = "1.5.2"
+navigation = "2.7.7"
+room = "2.6.1"
+hiltNavigationCompose = "1.2.0"
+ktor = "2.3.6"
+lifecycle = "2.7.0"
+datastore = "1.1.1"
+desugar = "2.0.4"
+apacheCommonsCodec = "1.15"
+apacheCommonsIo = "2.13.0"
+apacheCommonsLang3 = "3.12.0"
+prettytime = "5.0.0.Final"
+icu4j = "71.1"
+gson = "2.10.1"
+okhttp = "4.12.0"
+kotlinCoroutines = "1.7.1"
+paging = "3.2.1"
+snapper = "0.2.2"
+ksp = "1.9.22-1.0.17"
+workRuntimeKtx = "2.9.0"
+hiltWorker = "1.2.0"
+hiltCompile = "1.2.0"
+lottie = "6.4.0"
+androidxAppcompat = "1.6.1"
+hiltCommon = "1.2.0"
+coil-compose = "2.6.0"
+material = "1.11.0"
 
 [libraries]
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
@@ -20,8 +59,103 @@ compose-material = { group = "androidx.wear.compose", name = "compose-material",
 compose-foundation = { group = "androidx.wear.compose", name = "compose-foundation", version.ref = "composeFoundation" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
+android-core = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+android-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splash" }
+android-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+
+
+android-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+android-desugar = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar" }
+desuger = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar" }
+
+lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle" }
+lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+
+hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+
+ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
+ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" }
+ktor-client-contentNegotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-serialization-gson = { group = "io.ktor", name = "ktor-serialization-gson", version.ref = "ktor" }
+ktor-client-mock = { group = "io.ktor", name = "ktor-client-mock", version.ref = "ktor" }
+
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
+android-work-hilt = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltWorker" }
+android-work-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltCompile" }
+
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestExtJunit" }
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+
+
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppcompat" }
+androidx-hilt-common = { group = "androidx.hilt", name = "hilt-common", version.ref = "hiltCommon" }
+
+
+chucker = { group = "com.github.chuckerteam.chucker", name = "library", version.ref = "chucker" }
+chucker-nonfunctional = { group = "com.github.chuckerteam.chucker", name = "library-no-op", version.ref = "chucker" }
+
+prettytime = { group = "org.ocpsoft.prettytime", name = "prettytime", version.ref = "prettytime" }
+ibm-icu = { group = "com.ibm.icu", name = "icu4j", version.ref = "icu4j" }
+
+accompanist-permission = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
+
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+
+coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinCoroutines" }
+
+apache-commons-codec = { group = "commons-codec", name = "commons-codec", version.ref = "apacheCommonsCodec" }
+apache-commons-io = { group = "commons-io", name = "commons-io", version.ref = "apacheCommonsIo" }
+apache-commons-lang3 = { group = "org.apache.commons", name = "commons-lang3", version.ref = "apacheCommonsLang3" }
+
+paging-paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
+paging-common = { group = "androidx.paging", name = "paging-common", version.ref = "paging" }
+
+compose-snapper = { group = "dev.chrisbanes.snapper", name = "snapper", version.ref = "snapper" }
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+android-activity-compose = { group = "androidx.activity", name = "activity-compose" }
+compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
+compose-ui = { group = "androidx.compose.ui", name = "ui" }
+compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata" }
+compose-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayout" }
+compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+compose-navigation-hilt = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+
+compose-accompanist-navigation = { group = "com.google.accompanist", name = "accompanist-navigation-material", version.ref = "accompanist" }
+compose-accompanist-pager-indicator = { group = "com.google.accompanist", name = "accompanist-pager-indicators", version.ref = "accompanist" }
+
+lottie = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottie" }
+
+glide = { group = "com.github.skydoves", name = "landscapist-glide", version.ref = "glide" }
+compose-coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinAndroid" }
+
+
+
+[bundles]
+compose = ["compose-runtime", "compose-ui", "compose-ui-tooling-preview", "compose-material3", "compose-constraintlayout", "compose-runtime-livedata"]
+lifecycle = ["lifecycle-runtime", "lifecycle-livedata", "lifecycle-viewmodel", "lifecycle-viewmodel-compose"]
+ktor = ["ktor-client-core", "ktor-client-contentNegotiation", "ktor-serialization-gson", "ktor-client-okhttp", "ktor-client-logging"]
+
+
 
